# scorched-earth

./: .gitignore  .slainte  CLAUDE.md  LICENSE  README.md  TODO.md  install.sh  pyproject.toml  statusline-segment.sh  statusline-wrapper.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
commands/: coa.md  roe.md  sitrep.md  war-room.md
docs/: playbook.md  the-math.md
docs/design/: 2026-06-24-coa-cockpit-brief.md  2026-06-24-coa-html-mockup-brief.md  2026-06-24-coa-review-hud-brief.md
docs/superpowers/plans/: 2026-06-24-coa-advisor-phase1.md  2026-06-24-coa-cockpit-phase2b.md  2026-06-24-coa-kill-phase2c.md  2026-06-24-coa-runner-phase2a.md  2026-06-24-depth-rating.md  2026-06-24-multi-repo-run.md  2026-06-24-parallel-repos.md  2026-06-25-coa-budget-model-and-ux.md  2026-06-25-defcon-coa.md
docs/superpowers/specs/: 2026-06-24-coa-advisor-design.md  2026-06-24-coa-cockpit-phase2b-design.md  2026-06-24-coa-kill-phase2c-design.md  (+7 more)
hooks/: hooks.json  setup.sh
kivna/: vault.json
kivna/sessions/: 2026-06-24.md
skills/scorched-earth/: SKILL.md  setup.md
src/scorched_earth/: __init__.py  advisor.py  calibrate.py  coa_io.py  coa_report.py  coa_serve.py  coa_template.html  coa_view.py  cockpit_template.html  core.py  exec_modes.py  gradient.py  habits.py  jobs.py  report.py  review_report.py  review_template.html  roe.py  roe_edit.py  roe_template.html  roe_view.py  runner.py  shell.py  shell_template.html  state.py  statusline.py
tests/: test_advisor.py  test_cockpit.py  test_runner.py  test_scorched.py
